# corretor_automatico_clp

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
src/clp/: __init__.py  clp_client.py  modbus_client.py  opc_client.py
src/gui/: __init__.py  dialog_config.py  main_window.py
src/gui/components/: __init__.py  card_mapeamento_modbus.py  card_passo.py  tab_modbus.py  tab_opc.py  tab_passos.py
src/gui/components/scripts/: __init__.py  card_passo_rules.py  card_passo_ui.py
src/gui/custom_widgets/: __init__.py  no_scroll_combo_box.py
src/test/: __init__.py  test_engine.py  test_strucuture.py
