[project]
name = "corretor-automatico-factoryio"
version = "1.0.0"
description = "Script para correção automática de cenas do Factory I/O com CLPs utilizando Modbus TCP e OPC UA"
authors = [
    {name = "Andrew Mielczarski", email = "andrew.mielczarski@senairs.org.br"}
]
requires-python = ">=3.12"

# Apenas as dependências DIRETAS e ESSENCIAIS para o app funcionar
dependencies = [
    "aiofiles==25.1.0",
    "aiosqlite==0.22.1",
    "asyncua==1.1.8",
    "colorama==0.4.6",
    "darkdetect==0.8.0",
    "nest-asyncio==1.6.0",
    "psutil==7.2.2",
    "pymodbus==3.13.0",
    "PySide6==6.11.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.2",
    "qasync==0.28.0"
]

[dependency-groups]
# Ferramentas usadas exclusivamente para desenvolver, testar e empacotar
dev = [
    "ruff==0.15.13",
    "debugpy==1.8.20",
    "pyinstaller>=6.20.0",
]
